--- a/Target (6_5_2025) - CSSBattle_fichiers/KqqVsiGHvJ8j5uxoMofQ.html
+++ b/Target (6_5_2025) - CSSBattle_fichiers/KqqVsiGHvJ8j5uxoMofQ.html
@@ -1,4 +1,2 @@
 <html><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8"><style>body{overflow:hidden}</style></head><body><p></p><style>body{display: flex;height: 100%;justify-content: left;background: linear-gradient(to bottom, #EBF6F0 232px, #4E4B44 232px, #4E4B44);}
-  p{position: absolute;top: 212px;left: 36px;width: 40px;height: 40px;background: #4A9A86;
-    border-radius: 50%;box-shadow:62px 0 0 10px #4A9A86, 144px 0 0 20px #4A9A86, 226px 0 0 10px #4A9A86, 288px 0 #4A9A86;}</style></body></html>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8"><style>body{overflow:hidden}</style></head><body><p></p><style>body{display:flex;height:100%;justify-content:left;background:linear-gradient(to bottom,#EBF6F0 232px,#4E4B44 232px,#4E4B44);p{position:absolute;top: 212px;left:36px;width:40px;height:40px;background: #4A9A86;border-radius:50%;box-shadow:62px 0 0 10px#4A9A86, 144px 0 0 20px#4A9A86,226px 0 0 10px#4A9A86,288px 0 #4A9A86</style></body></html>
